assets/css/style.css
/*Google fonts import*/
@import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');

/*Asterisk overrides all styles. Low specificity so this can be easilly overridden*/
* {
    /*Color variables. Used to easily switch colors if needed. See comment related to darkmode on the bottom*/
    --background-color: #eff0f3;
    --background-color-2: #e2e4ec;
    --heading-color: #0d0d0d;
    --paragraph-color: #2a2a2a;
    --accent-color: #ff8e3c;
    --border-color: #2a2a2ae8;
    --shadow-color: #2a2a2a15;

    /*Overrides default settings*/
    margin: 0;
    padding: 0;
    border: 0;
    box-sizing: border-box;

    /*Sets font for entire page. Easily overriden*/
    font-family: 'Roboto', sans-serif;
}

/*General Styles*/
body {
    /*Makes sure the page takes up at least the whole viewport*/
    min-height: 100vh;
    width: 100vw;
    /*Required to make the main content take up any unused space*/
    display: flex;
    flex-direction: column;
    overflow-x: hidden;
}

h1,
h2 {
    color: var(--heading-color);
    font-size: 30px;
}

h3 {
    color: var(--heading-color);
    font-size: 16px;
    margin-top: 2rem;
}

p {
    color: var(--paragraph-color);
    font-size: 16px;
    margin-top: 0.5rem;
    font-weight: 400;
}

li {
    list-style-type: none;
}

a {
    text-decoration: none;
    color: var(--heading-color);
}

.icon-align-bottom {
    vertical-align: bottom;
}

.hidden {
    display: none;
}

/*Elements with this class will be hidden on desktop*/
.desktop-hidden {
    display: inherit;
}

/*Applies a slightly lighter color*/
.background-color-2 {
    background-color: var(--background-color-2);
}

/*Header*/
header {
    background-color: var(--background-color);
    padding: 5px 0;
    position: fixed;
    z-index: 99;
    width: 100%;
    display: flex;

    border-bottom: var(--border-color) solid 2px;
    box-shadow: 0px 1px 5px 5px var(--shadow-color);
}

/*Navbar styles*/
nav {
    /*Doesn't display by default*/
    display: none;
    position: absolute;
    left: 0;
    width: 100%;
    top: 0;
    transition: all 0.3s;
    align-items: flex-end;
}

#active {
    text-decoration: underline;
    text-decoration-thickness: 2px;
    text-underline-offset: 1px;
    text-decoration-color: var(--heading-color);
}

#logo-text {
    font-size: 1.2em;
    margin-left: 5px;
    width: 70px;
    margin-top: 0;
    color: var(--heading-color);
}

#logo {
    margin-left: 10px;
    height: 3em;
}

#logo a {
    display: inline-block;
    height: 0;
}

#logo a img {
    width: 3em;

}

#menu {
    width: 100%;
    text-align: right;
    background-color: var(--background-color);
    border-radius: 0 0 10px 10px;
    border-bottom: var(--border-color) solid 2px;
    box-shadow: 0px 1px 5px 5px var(--shadow-color);
}

#menu li {
    border-top: var(--border-color) solid 2px;
    padding: 10px;
}

#menu li h3 {
    margin: 0;
    width: 100%;
}

#menu li a {
    display: flex;
    align-items: flex-end;
    margin-right: 10px;
}

#hamburger-menu-container {
    display: flex;
    justify-content: flex-end;
    width: 100%;
    margin-right: 10px;
}


#hamburger-menu-icon span {
    font-size: 3em;
    color: var(--heading-color);
}

#hamburger-menu-toggle:checked~nav {
    /*Menu displays when the checkbox is pressed*/
    display: block;
    top: 100%;
    transition: all 0.3s;
}

/*Main content*/
main {
    background-color: var(--background-color);
    /*Makes the main element take up any unused space*/
    flex: 1 0 auto;
    /*Pushes the content under the header*/
    padding-top: 60px;
}

/*Makes the hero brighter to make it contrast more with the header, making the header more visible*/
.hero-image-overlay {
    width: 100vw;
    height: 100%;
    background-color: rgba(239, 240, 243, 0.5);
}

/*This is for home page images, might work with other pages later*/
.grid-image {
    display: block;
    flex-direction: column;
    align-items: center;
    margin: auto;
}

.grid-image img {
    width: 100%;
    padding: 5px;
    border: var(--heading-color) solid 2px;
    object-fit: cover;
}

/*Main heading = the title of the page*/
/*Container used to hold the contents and center them as flex does not have a justify self*/
#main-heading-container {
    margin-top: 10px;
    display: flex;
    justify-content: center;
    align-items: center;
}

/*Made to fit the content so the line underneath can adjust to be half the width of the text*/
#main-heading {
    width: fit-content;
    text-align: center;
    text-decoration: underline;
    text-decoration-thickness: 3px;
    text-decoration-color: var(--heading-color);
    text-underline-offset: 3px;
}

/*Line underneath*/
#main-heading hr {
    margin: 5px auto;
    width: 50%;
    border: var(--heading-color) solid;
    border-bottom: 3px;
}

#main-content {
    display: grid;
    justify-self: center;
    margin: auto;
}


#hero {
    height: 100px;
    /*Hero image from here: https://openclipart.org/detail/306640/desert-at-dusk
    Colors modified*/
    background-image: url("../images/hero.webp");
    background-size: 110%;
    background-position-x: center;
    background-position-y: 30%;

    background-color: var(--accent-color);
    margin: 0;
    border-bottom: 2px solid var(--border-color);
}

#text-container {
    display: block;
    width: 80%;
    height: min-content;
    max-width: 1100px;
    padding-bottom: 2rem;
    margin: auto;
}

#text-container section {
    padding: 1rem;
    margin-bottom: 10px;
    gap: 2rem;
}

#text-container section div p {
    margin-bottom: 20px;
}

#text-container section div h3 {
    margin: 0;
}


/*Footer*/
footer {
    background-color: var(--background-color);
    border-top: 2px solid var(--border-color);
}

footer hr {
    width: 90%;
    align-self: center;
    margin: auto;
    border-bottom: 2px solid var(--paragraph-color);
}

/*Social media links*/
#social-media {
    max-width: 400px;
    margin: auto;

    display: flex;
    justify-content: space-between;
    align-items: baseline;
    padding: 15px 40px;
}

#social-media i {
    font-size: 2em;
}

.social-media-item {
    text-align: center;
    margin: auto 5px;
    transition: transform 0.2s;
}

/*Contact and location*/

#info-footer,
#location-footer {
    margin: 15px;
    margin-left: 5%;
    margin-top: 10px;
    margin-bottom: 32px;
}

#info-footer h3,
#location-footer h3 {
    margin-bottom: 5px;
}

#info-footer a,
#location-footer a {
    display: flex;
    align-items: flex-end;
}

/*For screens larger than 768px*/
@media screen and (min-width: 768px) {

    /*Main*/
    /*Grid will be two columns on desktop*/
    .grid-2col-desktop {
        display: grid;
        height: fit-content;
        grid-template-columns: repeat(3, 1fr);
    }

    .grid-2-span {
        grid-column: span 2;
    }

    /*Used in grids to put an item first*/
    .order-1 {
        order: -1;
    }
}


/*For screens larger than 992px*/
@media screen and (min-width: 992px) {

    /*General styles*/
    /*Elements with this class will be hidden on desktop*/
    .desktop-hidden {
        display: none;
    }

    /*Navigation bar*/
    nav {
        display: flex;
        position: relative;
        height: auto;
        width: 100%;
        justify-content: right;
    }

    .nav-item {

        /*Transition settings*/
        text-underline-offset: 0;
        transition: all 0.2s;
    }

    /*When you hover over the element these properties will change. Applies to #active to override*/
    .nav-item:hover {

        transform: scale(1.2) translateY(-8px);
        /*Transition settings*/
        transition: all 0.2s;
        transition-timing-function: ease-in-out;
    }

    .nav-item h3 {
        /*Some fancy hover effect transition*/
        text-decoration: underline;
        text-decoration-color: #0d0d0d00;
        text-decoration-thickness: 3px;
        transition: all 0.2s;
    }

    .nav-item:hover h3,
    #active:hover {
        /*Some fancy hover effect transition*/
        text-decoration: underline;
        text-decoration-thickness: 3px;
        text-underline-offset: 7px;
        text-decoration-color: var(--heading-color);
        transition: all 0.3s;
    }

    #menu {
        display: flex;
        border: none;
        box-shadow: none;
        width: fit-content;
    }

    #menu li {
        border: none;
    }

    #menu li h3 {
        margin-right: 3px;
    }



    #hero {
        height: 150px;
    }

    #main-heading h2 {
        font-size: 4em;
    }


    #hamburger-menu-container {
        display: none;
    }

    /*Footer styles*/
    #info-location-container {
        display: flex;
        flex-direction: row;
        justify-content: center;
    }

    #info-footer {
        justify-content: right;
        min-width: 150px;
        margin-right: 100px;
        margin-bottom: 25px;
    }

    #info-footer h3 {
        height: fit-content;
    }

    #info-footer a {
        height: fit-content;
        margin-top: 0.5rem;
    }

    #location-footer {
        min-width: 150px;
        margin-left: 100px;
        margin-bottom: 25px;
    }

    /*Makes the icons grow slightly whn hovered over*/
    .social-media-item:hover {
        transform: scale(1.2) translateY(-5px);
    }
}

/*If user has darkmode selected on their device the site will appear in dark colors. This works by changing
the color variables declared above. Accent stays the same*/
@media (prefers-color-scheme: dark) {
    * {
        --background-color: #16161a;
        --background-color-2: #1a1a1f;
        --heading-color: #fffffe;
        --paragraph-color: #94a1b2;
        --border-color: #0c0c0ce8;
        --shadow-color: #07070715;
    }

    /*Makes the hero darker to make it contrast more with the header, making the header more visible*/
    .hero-image-overlay {
        background-color: rgba(22, 22, 26, 0.5);
    }
}

